examples/datalog/20_applications/10_common_ancestor.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_ancestor
Knowledge graph 'test_ancestor' created.
Switched to knowledge graph: test_ancestor
> .kg use test_ancestor
Switched to knowledge graph: test_ancestor
> +parent[(2, 1), (3, 1), (4, 2), (5, 2), (6, 3), (7, 3), (8, 4), (9, 4), (10, 6)].
Inserted 9 fact(s) into 'parent'.
> +ancestor(X, A) :- parent(X, A).
Rule 'ancestor' registered.
> +ancestor(X, A) :- parent(X, P), ancestor(P, A).
Rule 'ancestor' registered.
> +ancestors_of_8(A) :- ancestor(8, A).
Rule 'ancestors_of_8' registered.
> ?- ancestors_of_8(A).
3 rows:
  (1)
  (2)
  (4)
> +ancestors_of_10(A) :- ancestor(10, A).
Rule 'ancestors_of_10' registered.
> ?- ancestors_of_10(A).
3 rows:
  (1)
  (3)
  (6)
> +common_ancestor(A) :- ancestor(8, A), ancestor(10, A).
Rule 'common_ancestor' registered.
> ?- common_ancestor(A).
5 rows:
  (1)
  (2)
  (3)
  (4)
  (6)
> +ancestor_dist(X, A, 1) :- parent(X, A).
Rule 'ancestor_dist' registered.
> +ancestor_dist(X, A, D+1) :- parent(X, P), ancestor_dist(P, A, D).
Script error: Parse error: Invalid term: 'D+1'
